syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 1998
// EnetChannelId: 0
// EnetIsReliable: true
message SetCoopChapterViewedRsp {
	int32 retcode = 15;
	uint32 chapter_id = 3;
}
